--- a/css/styles.css
+++ b/css/styles.css
@@ -652,14 +652,14 @@ alpha = opacity*/
 .what-we-do{
   display: flex;
   flex-wrap: wrap;
-  margin-left: -30px;
-  margin-top: -30px;
+  margin-left: -15px;
+  margin-top: 72px;
 }
 
 .what-we-do .item{
   flex-basis: calc(100%/3-30px);
   margin-left: 30px;
-  margin-top: 30px;
+  /* margin-top: 30px; */
 }
 
 /*SECTION 3*/
@@ -710,6 +710,7 @@ alpha = opacity*/
     display: flex;
     justify-content: center;
     gap: 0 30px;
+    margin-top: 72px;
   }
 }
 
